# ublue-spinosauros

./: Containerfile  cosign.pub  image-template.env
.github/workflows/: build.yml
build_files/: build.sh
system_files/etc/customscripts/: configureUbuntuFonts.sh  enableExtensions.sh  extension-settings.dconf  fanControlAndThermal.sh  installflatpaks.sh  installpipxandgnomeshellextensions.sh  luks-addAndRemovePassphrase.sh  rebootIntoFirmware.sh  updateFirmware.sh
system_files/etc/dconf/db/distro.d/: 60-gnomecommon  60-keybindings  61-blur-my-shell  61-customkeybindings
system_files/etc/systemd/system/: configureExtensions.service
system_files/etc/systemd/user/: configureextensions.service
system_files/etc/ublue-os-spinosauros/: configureExtensions.sh
system_files/etc/udev/rules.d/: 99-apple-studio-display-hid.rules
system_files/etc/xdg/autostart/: appgrid.desktop  configureextension.desktop  setupflatpaks.desktop
system_files/usr/etc/containers/: policy.json
system_files/usr/lib/systemd/user/: spinosauros-first-login.service
system_files/usr/share/ublue-os-spinosauros/: appgrid.sh  configureExtensions.sh  enableExtensions.sh  extension-settings.dconf  installpipxandgnomeshellextensions.sh  rebase-spino.sh  setChargeLimitCombined.sh  setupflatpaks.sh
system_files/usr/share/ublue-os-spinosauros/asdbctl/: Cargo.toml
system_files/usr/share/ublue-os-spinosauros/asdbctl/rules.d/: 20-asd-backlight.rules
system_files/usr/share/ublue-os-spinosauros/asdbctl/src/: main.rs
system_files/usr/share/ublue-os/just/: 60-appgrid.just  60-configureextensions.just  (+8 more)
(+40 files in other folders)
