[package]
name = "asdbctl"
version = "1.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "2.6.3"
glob = "0.3.1"
clap = { version = "4.5" }
clap-num = "1.0.2"
regex = "1.10.6"
log = "0.4.22"
stderrlog = "0.6.0"
